--- a/fjcontrib/1.100/PATCHED/CMPPlugin/Makefile
+++ b/fjcontrib/1.100/PATCHED/CMPPlugin/Makefile
@@ -86,7 +86,7 @@ distclean: clean
 install: all
 	$(install_DIR) $(DESTDIR)$(PREFIX)/include/fastjet/contrib
 	for header in $(INSTALLED_HEADERS); do\
-	  $(install_HEADER) $$header $(DESTDIR)$(PREFIX)/include/fastjet/contrib/;\
+	  $(install_HEADER) include/fastjet/contrib/$$header $(DESTDIR)$(PREFIX)/include/fastjet/contrib/;\
 	done
 	$(install_DIR) $(DESTDIR)$(LIBDIR)
 	$(install_LIB) lib$(NAME).a $(DESTDIR)$(LIBDIR)
