--- a/SHERPA-MC/3.0.1/PATCHED/ATOOLS/Org/CMakeLists.txt
+++ b/SHERPA-MC/3.0.1/PATCHED/ATOOLS/Org/CMakeLists.txt
@@ -88,3 +88,6 @@ sherpa_handle_shared_library(ToolsOrg ToolsOrg)
 
 target_link_libraries(ToolsOrg PRIVATE LibZip::LibZip)
 target_link_libraries(ToolsOrg PRIVATE ${CMAKE_DL_LIBS})
+if (SHERPA_ENABLE_THREADING)
+  target_link_libraries(ToolsOrg PRIVATE Threads::Threads)
+endif()
