--- a/SHERPA-MC/3.0.1/PATCHED/ATOOLS/Phys/CMakeLists.txt
+++ b/SHERPA-MC/3.0.1/PATCHED/ATOOLS/Phys/CMakeLists.txt
@@ -68,3 +68,6 @@ sherpa_handle_shared_library(ToolsPhys ToolsPhys)
 if(SHERPA_ENABLE_LHAPDF)
     target_link_libraries(ToolsPhys PRIVATE LHAPDF::LHAPDF)
 endif()
+if (SHERPA_ENABLE_THREADING)
+  target_link_libraries(ToolsPhys PRIVATE Threads::Threads)
+endif()
