--- a/SHERPA-MC/3.0.1/PATCHED/COMIX/Amplitude/CMakeLists.txt
+++ b/SHERPA-MC/3.0.1/PATCHED/COMIX/Amplitude/CMakeLists.txt
@@ -6,3 +6,6 @@ sherpa_create_git_info(Amplitude)
  
 add_library(ComixAmplitude SHARED ${Amplitude_SOURCES} ${CMAKE_CURRENT_BINARY_DIR}/Git_Info.C )
 sherpa_handle_shared_library(ComixAmplitude ComixAmplitude)
+if (SHERPA_ENABLE_THREADING)
+  target_link_libraries(ComixAmplitude PRIVATE Threads::Threads)
+endif()
