--- a/SHERPA-MC/3.0.1/PATCHED/METOOLS/Currents/CMakeLists.txt
+++ b/SHERPA-MC/3.0.1/PATCHED/METOOLS/Currents/CMakeLists.txt
@@ -16,3 +16,6 @@ sherpa_create_git_info(Currents)
  
 add_library(METoolsCurrents SHARED ${Currents_SOURCES} ${CMAKE_CURRENT_BINARY_DIR}/Git_Info.C )
 sherpa_handle_shared_library(METoolsCurrents METoolsCurrents)
+if (SHERPA_ENABLE_THREADING)
+  target_link_libraries(METoolsCurrents PRIVATE Threads::Threads)
+endif()
