--- a/SHERPA-MC/3.0.1/PATCHED/CMakeLists.txt
+++ b/SHERPA-MC/3.0.1/PATCHED/CMakeLists.txt
@@ -322,6 +322,7 @@ else()
   set (LOADMPIFORPY "")
 endif()
 if (SHERPA_ENABLE_THREADING)
+  set(THREADS_PREFER_PTHREAD_FLAG ON)
   find_package(Threads REQUIRED)
 endif()
 
