--- a/MCFM/10.3/PATCHED/CMakeLists.txt
+++ b/MCFM/10.3/PATCHED/CMakeLists.txt
@@ -64,7 +64,7 @@ ExternalProject_Add(qcdloop
     SOURCE_DIR ${CMAKE_BINARY_DIR}/lib/qcdloop-2.0.9
     BUILD_IN_SOURCE ON
     PATCH_COMMAND mkdir -p ${CMAKE_BINARY_DIR}/local
-    CMAKE_ARGS -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DENABLE_FORTRAN_WRAPPER=ON -DCMAKE_INSTALL_PREFIX=${CMAKE_BINARY_DIR}/local -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER} -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER} -DCMAKE_INSTALL_LIBDIR=lib
+    CMAKE_ARGS  -DCMAKE_POLICY_VERSION_MINIMUM=3.5 -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DENABLE_FORTRAN_WRAPPER=ON -DCMAKE_INSTALL_PREFIX=${CMAKE_BINARY_DIR}/local -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER} -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER} -DCMAKE_INSTALL_LIBDIR=lib
     BUILD_COMMAND ${MAKE}
     INSTALL_COMMAND ${CMAKE_MAKE_PROGRAM} install
 )
@@ -74,7 +74,7 @@ ExternalProject_Add(liboneloop
     PREFIX ${CMAKE_BINARY_DIR}/lib/oneloop
     SOURCE_DIR ${CMAKE_BINARY_DIR}/lib/oneloop
     BUILD_IN_SOURCE ON
-    CMAKE_ARGS -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_Fortran_COMPILER=${CMAKE_Fortran_COMPILER} -DCMAKE_Fortran_FLAGS=-fPIC
+    CMAKE_ARGS -DCMAKE_POLICY_VERSION_MINIMUM=3.5 -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_Fortran_COMPILER=${CMAKE_Fortran_COMPILER} -DCMAKE_Fortran_FLAGS=-fPIC
     BUILD_COMMAND ${MAKE}
     INSTALL_COMMAND mkdir -p ${CMAKE_BINARY_DIR}/local/include && cp ${CMAKE_BINARY_DIR}/lib/oneloop/avh_olo.mod ${CMAKE_BINARY_DIR}/local/include 
 )
